2.0.6/_sources/plugins/available/demux/summarize.txt
summarize: Summarize counts per sample.
=======================================

Generate a summary of counts per sample from sequence data that has already been demultiplexed

.. raw:: html

   <table class="table action-signature">
     
     <thead>
       <tr>
         <th colspan="3">Inputs</th>
       </tr>
       
       <tr>
         <th>Name</th>
         <th>Type</th>
         <th>Default</th>
       </tr>
       
     </thead>
     <tbody>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">data</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">SampleData[SequencesWithQuality]</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Required</span>
           </code>
         </td>
         
       </tr>
       
     </tbody>
     
     <thead>
       <tr>
         <th colspan="3">Parameters</th>
       </tr>
       
       <tr>
         <th colspan="3" class="text-muted">N/A</th>
       </tr>
       
     </thead>
     <tbody>
       
     </tbody>
     
     <thead>
       <tr>
         <th colspan="3">Outputs</th>
       </tr>
       
       <tr>
         <th>Name</th>
         <th>Type</th>
         <th>Default</th>
       </tr>
       
     </thead>
     <tbody>
       
       <tr>
         
         <td>
           <code class="docutils literal">
             <span class="pre">visualization</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">Visualization</span>
           </code>
         </td>
         
         <td>
           <code class="docutils literal">
             <span class="pre">N/A</span>
           </code>
         </td>
         
       </tr>
       
     </tbody>
     
   </table>